# email-address-validator

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  crates-io.md
.github/: pull_request_template.md
.github/workflows/: build.yml
src/: domain.rs  email.rs  error.rs  lib.rs  options.rs
