[package]
name = "email_address_validator"
authors = ["Chris Tisdale <crates.io.affection262@passmail.net>"]
description = "A simple email address parsing library"
rust-version = "1.93.0"
keywords = ["email-address"]
documentation = "https://docs.rs/email_address_validator"
version = "0.1.0"
edition = "2021"
resolver = "3"
license = "MPL-2"
readme = "crates-io.md"
repository = "https://github.com/ChrisTisdale/email-address-validator"
include = [
    "src/**",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE.md",
    "crates-io.md"
]
publish = true

[features]
std = ["thiserror/default"]
default = ["std"]
serde = ["std", "dep:serde"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = { version = "2.0.18", default-features = false }
